[package]
name = "hyper-issue"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hyper1_client"

[[bin]]
name = "reqwest_client"

[[bin]]
name = "server"


[dependencies]
hyper = { version = "1.1.0", features = ["http1", "client", "server"] }
http-body-util = "0.1.0"
tokio = { version = "1.35.1", features = ["full"] }
bytes = "1.5.0"
tokio-stream = "0.1.14"
pin-project-lite = "0.2.13"
log = "0.4.20"
futures-util = "*"
reqwest = "0.11.23"
