[package]
name = "client0x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.28", features = ["http1", "client", "tcp"] }
tokio = { version = "1.35.1", features = ["full"] }
