[package]
name = "client1x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
hyper = { version = "1.1.0", features = ["client", "http1"] }
tokio = { version = "1.35.1", features = ["full"] }

bytes = "1.5.0"
http-body-util = "0.1.0"
