[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
common = { path = "../common" }
hyper = { version = "1.1.0", features = ["http1", "server"] }
tokio = { version = "1.35.1", features = ["full"] }

http-body-util = "0.1.0"
bytes = "1.5.0"
tokio-stream = "0.1.14"
futures-util = "*"
